--- a/docs/main.css
+++ b/docs/main.css
@@ -217,7 +217,7 @@ table {
 	background-color: #fff;
 }
 
-.page-ellipses {
+.page-ellipsis {
 	display: inline-block;
 	padding-left: 8px;
 	padding-right: 8px;
