--- a/docs/main.css
+++ b/docs/main.css
@@ -173,23 +173,7 @@ table {
 	background-color: #f0f8ff;
 }
 
-.total-table--selected-column-1 td:nth-child(2),
-.total-table--selected-column-1 th:nth-child(2) {
-	background-color: #f0f8ff;
-}
-
-.total-table--selected-column-2 td:nth-child(3),
-.total-table--selected-column-2 th:nth-child(3) {
-	background-color: #f0f8ff;
-}
-
-.total-table--selected-column-3 td:nth-child(4),
-.total-table--selected-column-3 th:nth-child(4) {
-	background-color: #f0f8ff;
-}
-
-.total-table--selected-column-4 td:nth-child(5),
-.total-table--selected-column-4 th:nth-child(5) {
+.total-table--selected-column {
 	background-color: #f0f8ff;
 }
 
