update: スコア保存ブックマークレットの本体のファイル名変更および起動過程変更

--- a/docs/main.css
+++ b/docs/main.css
@@ -114,12 +114,16 @@ input {
 	color: #969696;
 }
 
+.code__constant {
+	color: #777700;
+}
+
 .code__statement {
 	color: #0000ff;
 }
 
-.code__constant {
-	color: #777700;
+.code__type {
+	color: #0000ff;
 }
 
 /**
