--- a/docs/main.css
+++ b/docs/main.css
@@ -194,19 +194,39 @@ input {
  * アプリケーション > リザルト一覧
  */
 .filtered-results {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+	margin: 0 auto;
+	max-width: 820px;
+}
+
+.selected-results {
+	margin: 10px 0;
 }
 
 .selected-results-table {
-	margin: 10px;
+	width: 100%;
+	table-layout: fixed;
+	white-space: nowrap;
 }
 
-.selected-results-table td.result-medal {
-	text-align: center;
+.selected-results-table th.result-type {
+	width: 80px;
 }
 
+.selected-results-table th.result-medal,
+.selected-results-table th.result-rank {
+	width: 56px;
+}
+
+.selected-results-table th.result-score {
+	width: 72px;
+}
+
+.selected-results-table td.music {
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
+.selected-results-table td.result-medal,
 .selected-results-table td.result-rank {
 	text-align: center;
 }
@@ -215,8 +235,14 @@ input {
 	text-align: right;
 }
 
+.pagination {
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	align-content: center;
+}
+
 .page-number {
-	display: inline-block;
 	padding-left: 8px;
 	padding-right: 8px;
 	border: 1px #d0d0d0 solid;
@@ -229,7 +255,6 @@ input {
 }
 
 .page-ellipsis {
-	display: inline-block;
 	padding-left: 8px;
 	padding-right: 8px;
 }
