update: ページネーションの HTML, CSS を修整する変更

--- a/docs/main.css
+++ b/docs/main.css
@@ -341,6 +341,9 @@ input {
 	padding-right: 8px;
 	border: 1px #d0d0d0 solid;
 	background-color: #f6f6f6;
+}
+
+.page-number:not(.page-number--current) {
 	cursor: pointer;
 }
 
