--- a/docs/main.css
+++ b/docs/main.css
@@ -336,8 +336,9 @@ input {
 .pagination {
 	display: flex;
 	justify-content: center;
-	flex-wrap: wrap;
 	align-content: center;
+	flex-wrap: wrap;
+	padding: 0 12px;
 }
 
 .page-number {
