--- a/docs/main.css
+++ b/docs/main.css
@@ -25,22 +25,31 @@ input {
 }
 
 .site-header {
-	display: flex;
-	box-sizing: content-box;
-	border-bottom: 1px solid gainsboro;
-	white-space: nowrap;
 	position: fixed;
-	top: 0;
 	width: 100%;
+	white-space: nowrap;
 	background-color: #fff;
+	border-bottom: 1px solid gainsboro;
+}
+
+.header-inner {
+	box-sizing: border-box;
+	max-width: 820px;
+	height: 100%;
+	margin: 0 auto;
+	display: flex;
 }
 
 .site-title {
-	margin: 0 12px;
+	margin: 0;
+	padding: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	line-height: 1.25;
 }
 
 .site-title > a {
-	display: inline-block;
 	text-align: center;
 }
 
@@ -55,9 +64,12 @@ input {
 		height: 64px;
 	}
 
+	.header-inner {
+		padding: 0 12px;
+	}
+
 	.site-title {
 		font-size: 22px;
-		line-height: 32px;
 	}
 
 	.site-main {
@@ -70,9 +82,12 @@ input {
 		height: 48px;
 	}
 
+	.header-inner {
+		padding: 0 4px;
+	}
+
 	.site-title {
 		font-size: 16px;
-		line-height: 24px;
 	}
 
 	.site-main {
